Trigger on push to branch, but not tag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
 name: ci/cd
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - '**' # Trigger on push to any branch, but not tags.
+
 jobs:
 
   build:
