--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -15,5 +15,7 @@ jobs:
       - name: 📢 Output info
         run: |
           echo "*** github.ref: ${{ github.ref }}"
+          echo "*** github.ref_type: ${{ github.ref_type }}"
+          echo "*** github.ref_name: ${{ github.ref_name }}"
           echo "*** github.event_name: ${{ github.event_name }}"
           echo "*** github.event.ref: ${{ github.event.ref }}"
